Add content to the index in theory about Harry Potter but mostly just making fun of younger me.

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>First Website ;)</title>
 	</head>
 	<body>
-		<h1>Header 1</h1>
+	<main>
+		<h1>Harry Potter Fansite</h1>
+	
+	<p> Welcome to a Harry Potter fansite. Since this is supposed to be my first website and my original geocities dumpsterfire of a first website no longer exists (and that's probably a good thing), but it is apparently somewhat <a href=http://www.oocities.org/the3broomstix/3broomstix.html>archived</a> (and that's probably a <em>bad</em> thing). Hopefully I have learned, and if not, hopefully I will learn.</p>
+	<p>While we're on the subject, reasons why that site was awful include:</p>
+	<ol>
+		<li>It was 2003</li>
+		<li>I was 14</li>
+		<li>I was using a WYSIWYG</li>
+		<li>I was using <em>GeoCities's</em> WYSIWYG</li>
+		<li><strong>I was 14</strong></li>
+	</ol>
+
+
+	<h2>Hogwarts Houses</h2>
+	<ul>
+		<li>Gryffindor</li>
+		<li>Hufflepuff</li>
+		<li>Ravenclaw</li>
+		<li>Slytherin</li>
+	</ul>
+
+
+	</main>
 	</body>
 </html>
