Create table-practice page with table containining Hogwarts house information

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -4,9 +4,8 @@
 		<title>Hogwarts Houses</title>
 	</head>
 	<body>
-		<h1>Some info on Hogwarts Houses:</h1>
-		<table border=1 bordercolor="purple">
-		<!--friend, I know the bordercolor (and border for that matter) is an outdated practice, but we haven't gotten to CSS yet, so just let me enjoy my life-->
+		<h1>Some info on Hogwarts houses:</h1>
+		<table border=1>
 			<tr>
 				<th>House</th>
 				<th>Founder</th>
