Add info on movie interpretation and change strong designation for houses to table headers.

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -13,28 +13,51 @@
 				<th>Mascot</th>
 			</tr>
 			<tr>
-				<td><strong>Gryffindor</strong></td>
+				<th>Gryffindor</td>
 				<td>Godric Gryffindor</td>
 				<td>Red & Gold</td>
 				<td>Lion</td>
 			</tr>
 			<tr>
-				<td><strong>Hufflepuff</strong></td>
+				<td>Hufflepuff</td>
 				<td>Helga Hufflepuff</td>
 				<td>Yellow & Black</td>
 				<td>Badger</td>
 			</tr>
 			<tr>
-				<td><strong>Ravenclaw</strong></td>
+				<td>Ravenclaw</td>
 				<td>Rowena Ravenclaw</td>
 				<td>Blue & Bronze</td>
 				<td>Eagle</td>
 			</tr>
 			<tr>
-				<td><strong>Slyterin</strong></td>
+				<td>Slyterin</td>
 				<td>Salazar Slytherin</td>
 				<td>Green & Silver</td>
 				<td>Snake</td>
+			</tr>
+		</table>
+		<h2>Hogwarts house colors according to the movies (which are wrong)</h2>
+		<table>
+			<tr>
+				<td>&nbsp;</td>
+				<th>Gryffindor</th>
+				<th>Hufflepuff</th>
+				<th>Ravenclaw</th>
+				<th>Slytherin</th>
+			</tr>
+			<tr>
+				<th>Primary Color</th>
+				<td>Red</td>
+				<td>Yellow</td>
+				<td>Blue</td>
+				<td>Green</td>
+			</tr>
+			<tr>
+				<th>Secondary Color</th>
+				<td>Gold</td>
+				<td>Black</td>
+				<td colspan="2">Silver</td>
 			</tr>
 		</table>
 	</body>
