--- a/html/moon_bootz/index.html
+++ b/html/moon_bootz/index.html
@@ -7,5 +7,13 @@
 </head>
 <body>
 <h2> Welcome to the <em> Official </em> Moon Boots page </h2>
+
+<nav>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+</nav>
 </body>
 </html>
