--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -68,3 +68,17 @@
 </footer>
 </body>
 </html>
+<!--
+What's the purpose of HTML5 semantic tags? Which ones do you see as most useful?
+A: The purpose is to group content. In theory this helps accessibility like with screen readers. It also helps with search crawlers to know which content to focus on in its indexing and in theory should even help with display across devices/browsers/etc. I think <main></main> is likely the most useful since all else seems to have a lot of debate and uncertainty surrounding them, though footers and headers are probably also pretty high on the list of helpfulness too.
+
+What's the order the browser uses to display elements on a page? 
+A: It looks like a browser just kind of does its FIFO thing. If a tag is messed up, it doesn't matter if it's a super important one or not, it can mess up all the following tags regardless of order of import. 
+
+What did you learn about Sublime in this challenge? Do you think you'll create more handy snippets at a later date?
+A: I learned that snippets were something anyone can write. And really that Sublime is much more versatile than I originally realized. I'll almost certainly end up creating more snippets later, once I have more experience and see what bits of code appear over and over in every project (or for HTML, which bits of code appear a lot in one big ongoing project).
+
+What concept in this challenge was most difficult for you? How can you improve your understanding of this concept?
+A: Creating the snippet was the hardest part of this challenge, I think. It was the newest bit of material, and I was mostly treating Sublime as a more "traditional" piece of software where modding is hard and questionably legal and generally not worth it. I know better now and plan on reading more about this nifty program.
+
+-->
