fixed nav on home page

--- a/html/moon_bootz/index.html
+++ b/html/moon_bootz/index.html
@@ -10,10 +10,11 @@
 
 <nav>
   <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="contact.html">Visit out contact page</a></li>
+    <li><a href="waiver.html">Our legal page</a></li>
+    <li><a href="product_details.html">Learn more about our product</a></li>
   </ul>
 </nav>
+
 </body>
 </html>
