fixed nav on index.html page and added product details on pd page

--- a/html/moon_bootz/product_details.html
+++ b/html/moon_bootz/product_details.html
@@ -4,6 +4,19 @@
   <title>Product Details</title>
 </head>
 <body>
+<h1>Product Details</h1>
+<ul>
+  <li>Boot available in 5 colors</li>
+  <li>Adjustable straps</li>
+  <li>Shoelaces included, pick from 4 assorted neon colors</li>
+</ul>
+<h2>Assorted Shoelace Colors:</h2>
+<ol>
+  <li>Neon Pink</li>
+  <li>Neon Green</li>
+  <li>Neon Orange</li>
+  <li>Neon Blue</li>
+</ol>
 
 </body>
 </html>
