--- a/html/moon_bootz/contact.html
+++ b/html/moon_bootz/contact.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>About</title>
+
+    <title>Contact Information</title>
 </head>
 <body>
-<h1> We are located at.. </h1>
-<p> 411 Rocket Avenue, Somers, New York 10589 </p>
+
+<p> We are located at 411 Rocket Avenue, Somers, New York 10589 </p>
+
+<footer><a href="index.html">Home</a></footer>
 
 </body>
+
+
 </html>
