--- a/html/moon_bootz/product_details.html
+++ b/html/moon_bootz/product_details.html
@@ -5,6 +5,9 @@
 </head>
 <body>
 <h1>Product Details</h1>
+
+<img src="images/moon_bootz.jpg" alt="moon boots" />
+
 <ul>
   <li>Boot available in 5 colors</li>
   <li>Adjustable straps</li>
