--- a/html/moon_bootz/legal/waiver.html
+++ b/html/moon_bootz/legal/waiver.html
@@ -6,14 +6,14 @@
 <body>
   <p>Moon Bootz (TM) is not responsible for anything that happens to you while wearing their product. Ever. You might want to invest in a helmet.</p>
 
-  <img src="https://www.flickr.com/photos/22586679@N04/3857267279/in/photolist-5V7BiJ-49baZu-dHo5se-Ehvj-7LVi8T-jMq65-bzL2Yf-7W3taU-6cEJKB-2o6xdF-q6Pwpv-9S6Mqk-6kaaSf-7jLiT6-vTyUS-sqDg8m-9bxQhU-8cmUdz-fibQTP-9wwmc9-5ZVesq-ozTnEs-9uE9Fc-4cYSTU-5dRCi3-9raDCK-g3Mtni-5eGq2U-5SubHi-9pDkmn-2VRYgs-hyZ5vd-8pjvSe-5FJn5t-5fJytx-c9F1qh-wcgQN-qFQktn-6SRvbg-6BxP8s-cakGkW-bFdDZ7-dm1ZY-AwCRY6-uyyTd-gNLU2p-dfa2zP-eS9cdG-bUs61p-M99vt" alt= "Blue_moon.jpg,By dinobike" />
+  <img src="../images/blue_moon.jpg" alt= "Blue_moon.jpg,By dinobike" />
 <nav>
   <a href="https://creativecommons.org/licenses/by-nd/2.0/">Public License</a>
 </nav>
 
 
     <footer>
-  <a href="index.html">Click here to go home</a></footer>
+  <a href="../legal/moon_bootz/index.html">Click here to go home</a></footer>
 
 </body>
 </html>
