added new table with colspan and rowspan

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -6,6 +6,8 @@
 <body>
 
 <h1>Favorite Foods</h1>
+
+<p> A list of mine and Jon's favorite food by cuisine </p>
   <table border=1>
   <tr>
     <th>Cuisine</th>
@@ -28,6 +30,26 @@
     <td>Dim sum</td>
   </tr>
 </table>
-
+<br>
+<p> Here is a list of former pets I have owned. </p>
+<br>
+<table border =1>
+  <tr>
+    <th colspan="2">Pets</th>
+    <th>Breed</th>
+    <th>Color</th>
+  </tr>
+  <tr>
+    <td rowspan="2">Dogs</td>
+    <td>Belle</td>
+    <td>Dachshund</td>
+    <td>Brown</td>
+  </tr>
+    <tr>
+      <td>Romy</td>
+      <td>Bichon</td>
+      <td>White</td>
+    </tr>
+</table>
 </body>
 </html>
