Never saved all my changes this is a bad commit message idgaf right now. <3

--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -5,9 +5,12 @@
 	<title>Octopus!</title>
 </head>
 <body>
-<img id="glasses" src="glasses.png" alt="specticals">
-<img id="hat" src="hat.png" alt="Cowboy hat">
-<img id="octopus" src="octopus.png" alt="octopus">
+
+<div class="octostyle">
+	<img id="glasses" src="glasses.png" alt="specticals">
+	<img id="hat" src="hat.png" alt="Cowboy hat">
+	<img id="octopus" src="octopus.png" alt="octopus">
+</div>
 
 </body>
 </html>
