Complete responsive design with media tag.

--- a/css/responsive-design/index.html
+++ b/css/responsive-design/index.html
@@ -7,21 +7,18 @@
 
 </head>
 <body>
-  <div class="column">
   <section id="external-links">
     <h1>External Links</h1>
     <ul>
-      <li><a href="https://en.wikipedia.org/wiki/Wildflower">Wildflowers on Wikipedia</a></li>
-      <li><a href="http://www.americanmeadows.com/wildflower-seeds">Shop for Wildflower Seeds</a></li>
-      <li><a href="https://www.pinterest.com/pscheen/wildflowers/">Wildflower Gallery on Pinterest</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Wildflower"><span class="exLink">Wildflowers on Wikipedia</span><img src="images/bacon.png" alt="Bacon" class="altLink"></a></li>
+      <li><a  href="http://www.americanmeadows.com/wildflower-seeds"><span class="exLink">Shop for Wildflower Seeds<img src="images/avocado.png" alt="Avocado" class="altLink"></span></a></li>
+      <li><a href="https://www.pinterest.com/pscheen/wildflowers/"><span class="exLink">Wildflower Gallery on Pinterest<img src="images/bananas.png" alt="Bananas" class="altLink"></span></a></li>
     </ul>
   </section>
-  </div>
-  <div class="column">
   <main>
     <h1>Wildflowers: The Hottest "Found Decor" Trend</h1>
     <figure>
-      <img id="orange-flower" src="images/orange_flowers.jpg" alt="orange wildflowers">
+      <img src="images/orange_flowers.jpg" alt="orange wildflowers">
       <figcaption><a href="https://www.flickr.com/photos/pachecophotography/5595444482/in/photolist-9ws7GJ-aeCdK9-6iiDk2-6eVvUX-9PwETY-qYDTdj-a8jVwo-5YRLHL-6MvgD3-6imBSD-68vxHc-fBtqwB-rsjDu9-kq5KxG-8LGwrc-7WZav1-dXd2LM-pLSFWW-nA1akG-bSq4xc-8J4xzV-7QKFrw-4BPyPZ-oFC3gj-fNYbSq-aayatz-7Ks3ck-9sswrK-6H4SX6-oEXNw6-dUDDWf-apxi6h-8iDjNb-7PhB8a-oQKeiU-9AeFJL-oWUSyM-roFspK-p7qyXj-6G5wwP-685kmL-pXN9Wk-a7PWRN-rmrfts-noqDnd-8gUJ38-pbX8Yg-4WmtAj-v2X9jx-9WPUyn">Pacheco Landscapes</a> via <a href="https://creativecommons.org/licenses/by-nd/2.0/">Creative Commons</a></figcaption>
     </figure>
     <p>You've seen it on Pinterest and in all the hottest decorating magazines: the biggest new thing in decor is just leaving some flowers in the ground, right where you found them.</p>
@@ -43,6 +40,5 @@
       <li>Enjoy.</li>
     </ol>
   </main>
-  </div>
 </body>
 </html>
